# rzn.AI

./: .gitignore  README.md  middleware.ts  next.config.js  package-lock.json  package.json  ryzn-notes.code-workspace  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/actions/: chat.ts  response.ts  summarize.ts  transcribe.ts  types.ts
app/api/chat/: route.ts
app/api/chat/courses/: route.js
app/api/quiz/: route.ts
app/api/response/: route.ts
app/api/summarize/: route.ts
app/api/supabase-token/: route.ts
app/backend/: main.py  requirements.txt
app/chat/: page.tsx  page1.tsx
app/components/: ChatInterface.tsx  Header.tsx  audio-recorder.tsx
app/dashboard/: page.tsx
app/demo/: page.tsx
app/demo2/: page.tsx
app/desmos/: page.tsx
app/excalidraw/: page.tsx
app/login/: page.tsx
app/math-visuals/: page.tsx
app/notes/: page.tsx
app/onboarding/: page.tsx
app/sign-in/[[...sign-in]]/: page.tsx
app/sign-up/[[...sign-up]]/: page.tsx
app/signup/: page.tsx
app/utils/: audio.ts  tts.ts
backend/: pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/quiz/: quiz.py
components/: chat-interface.tsx  model-selector.tsx  quiz-component.tsx  status-badge.tsx
lib/hooks/: use-user.ts
types/: supabase.ts
utils/: supabase.js
